@@ -411,8 +411,8 @@ def add_table(name: str, headers: List[str], callback: Callable = None, callback
 	...
 
 def add_text(name: str, wrap: int = 0, color: List[float] = [0, 0, 0, -1], bullet: bool = False, tip: str = "", parent: str = "", 
-			 before: str = "", label: str = "", popup: str = "", show: bool = True) -> None:
-	"""Adds text"""
+			 before: str = "", label: str = "", popup: str = "", show: bool = True, source: str = "", default_value: str = "") -> None:
+	"""Adds text."""
 	...
 
 def add_text_point(plot: str, name: str, x: float, y: float, vertical: bool = False, xoffset: int = 0, yoffset: int = 0, update_bounds: bool = True) -> None:
